<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unair Hebat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="selamat_datang">Selamat Datang</string>
    <string name="user_name">User Name</string>
	<string name="password">password</string>
	<string name="login">Login</string>
	<string name="daftar">Daftar</string>
    <string name="belum_punya">Belum punya akun?</string>
	
    
    <string name="pilihlevel">Pilih Level</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="kembali">Kembali</string>
    <string name="cobae">Coba E-learning berbasis Aps</string>
    
    <string name="keluar">Keluar</string>
    
    <string name="cek">Cek Jawaban</string> 
    <string name="MJ">Masukkan Jawaban</string>
    <string name="TG">Tebak Gambar</string> 
    
</resources>
